--- a/css/styles.css
+++ b/css/styles.css
@@ -521,6 +521,7 @@ h2 {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: visibility, opacity;
+    z-index: 1000;
 }
 
 .modal {
@@ -531,6 +532,7 @@ h2 {
     width: 528px;
     min-height: 581px;
     background-color: white;
+
 }
 
 .close-btn {
@@ -552,4 +554,84 @@ h2 {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: visibility, opacity;
+}
+
+.form-header {
+    size: 20px;
+    display: block;
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.form-data {
+    color: #757575;
+    font-size: 12px;
+    display: block;
+}
+
+.form-image {
+    width: 12px;
+    height: 12px;
+    fill: #212121;
+}
+
+.footer-newsletter-label {
+    display: block;
+}
+
+.email-newsletter {
+    background-color: transparent;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding-left: 16px;
+
+}
+
+.footer-button {
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: white;
+    font-weight: 700;
+    border-color: transparent;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 12px;
+
+
+}
+
+.footer-image {
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    fill: white;
+    margin-left: 24px;
+
+}
+
+.footer-newsletter {
+    margin-left: 90px;
+}
+
+.contact-form {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.contact-window {
+    width: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+.form-box {
+    position: relative;
 }
