--- a/css/styles.css
+++ b/css/styles.css
@@ -528,6 +528,7 @@ h2 {
     width: 528px;
     min-height: 581px;
     background-color: white;
+
 }
 
 .close-btn {
@@ -556,6 +557,7 @@ h2 {
     display: block;
     text-align: center;
     margin-bottom: 12px;
+    margin-top:40px ;
 }
 
 .form-data {
@@ -568,6 +570,9 @@ h2 {
     width: 12px;
     height: 12px;
     fill: #212121;
+    position: absolute;
+    left: 14px;
+    top: 14px;
 }
 
 .footer-newsletter-label {
@@ -618,11 +623,56 @@ h2 {
 
 .contact-window {
     width: 100%;
+    height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     margin-bottom: 10px;
+    padding-left: 42px;
 }
 
-.form-box {
+.contact-window.contact-comment {
+    padding-left: 16px;
+    padding-top: 12px;
+    height: 120px;
+    width: 100%;
+    resize: none;
+    margin-bottom: 25px;
+}
+
+.form-icon {
     position: relative;
+}
+
+.checkbox {
+    width: 16px;
+    height: 15px;
+    margin-left: 15px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+}
+
+.checkbox-privacy{
+    font-size: 14px;
+    color: #757575;
+}
+
+.privacy-link {
+    color:rgba(33, 150, 243, 1);
+}
+
+.form-send{
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+   color:rgba(255, 255, 255, 1);
+    border-color: transparent;
+
+}
+
+.form-button-send{
+    text-align: center;
+    margin-top: 30px;
 }
